--- a/common.zh_TW.po
+++ b/common.zh_TW.po
@@ -28,9 +28,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Xonotic\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-05-26 07:22+0200\n"
+"POT-Creation-Date: 2023-05-28 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: 韬 刘 <jiegushijia@gmail.com>, 2019\n"
+"Last-Translator: 黃柏諺 <s8321414@gmail.com>, 2015\n"
 "Language-Team: Chinese (Taiwan) (http://app.transifex.com/team-xonotic/"
 "xonotic/language/zh_TW/)\n"
 "Language: zh_TW\n"
@@ -5935,13 +5935,6 @@ msgstr "第 %d 名"
 #: qcsrc/lib/oo.qh:336
 msgid "No description"
 msgstr "無說明"
-
-#: qcsrc/lib/spawnfunc.qh:267
-#, c-format
-msgid ""
-"Entity field %s.%s (%s) is not whitelisted. If you believe this is an error, "
-"please file an issue."
-msgstr "實體域 %s.%s (%s) 未列入白名單。如果你確認這是一個錯誤，請報告問題。"
 
 #: qcsrc/lib/string.qh:186
 #, c-format
